--- a/static/css/components/upscaler.css
+++ b/static/css/components/upscaler.css
@@ -267,6 +267,7 @@
     max-width: 100%;
     max-height: 100%;
     position: relative;
+    transform-origin: 0 0; /* Consistent origin for zoom transforms */
 }
 
 .image-stack > img {
